kustomization/overlays/prod/postgresql/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: postgres-ingress
spec:
  rules:
    - host: minio-postgres.hogs.tswn.us
      http:
        paths:
          - backend:
              service:
                name: minio-svc
                port:
                  name: web
            path: /
            pathType: Prefix
